bootstrap/ic-gradio/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql-service
  namespace: ic-shared-llm
  labels:
    app: ic-shared-llm
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 7860
      targetPort: http
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ic-shared-llm
