bootstrap/ic-gradio/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ic-pgvector-llm-route
  namespace: ic-shared-llm
  labels:
    app: ic-shared-llm
spec:
  to:
    kind: Service
    name: postgresql-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
